# NetJoystick

./: .gitignore  Cargo.toml  README.md
client/: README.md
client/NetJS/: README.md
client/NetJS/src/: index.html  styles.css
client/NetJS/src-tauri/: Cargo.toml  tauri.conf.json
client/NetJS/src-tauri/src/: main.rs
client/NetJS/src-tauri/src/lib/: linux.rs
client/src/: index.html  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src-tauri/src/lib/: linux.rs
server/: Cargo.toml  README.md
server/SNetJS/src/: index.html  style.css
server/SNetJS/src-tauri/: Cargo.toml  tauri.conf.json
server/src/: index.html  main.js  style.css
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/src/: main.rs
server/src-tauri/src/api/: mod.rs  server.rs
server/src-tauri/src/api/vjoystick/: axis.rs  buttons.rs  mod.rs
src/: main.rs
src/client/: Cargo.toml
src/client/src/: main.rs
src/lib/client/: linux.rs
src/lib/server/: linux.rs
src/server/: Cargo.toml
