[package]
name = "Testsmth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Linux
# Client
evdev = {version = "0.12.0", features = ["tokio"]} # Hook onto device
tokio = {version = "1.28.0", features = ["full"]}
# Server
input-linux = "0.6.0"