[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For UI
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"

# For Backend
evdev = {version = "0.12.0", features = ["tokio"]}
tokio = {version = "1.28.0", features = ["full"]}